# python-architecture-linter

./: .coveragerc  .flake8  .gitignore  README.md  mypy.ini  pants.toml  pyproject.toml  sonar-project.properties
.github/workflows/: codeql-analysis.yml  main.yml
demo_project/: BUILD  README.md  cli.py  pyproject.toml
grimp_package_metrics/: BUILD  LICENCE  README.md  __init__.py  coupling_metrics.py  dependency_cycles.py  pyproject.toml
grimp_package_metrics/tests/: test_coupling_metrics.py  test_dependency_cycles.py
modular_provider_architecture_definition/: BUILD  LICENCE  README.md  __init__.py  definition.py  function_validators.py  pyproject.toml  validators.py
modular_provider_architecture_definition/tests/: test_definition.py
modular_provider_architecture_definition/tests/cases/modular_provider_architecture/modular_provider_architecture/: excuses.yml
modular_provider_architecture_definition/tests/cases/modular_provider_architecture/modular_provider_architecture/logic_module/: logic.py  provider.py
modular_provider_architecture_definition/tests/cases/modular_provider_architecture/modular_provider_architecture/module_runtime/: run.py
modular_provider_architecture_definition/tests/cases/modular_provider_architecture/modular_provider_architecture/runtime_module/: run.py  runtime.py
python_architecture_linter/: BUILD  LICENCE  README.md  __init__.py  class_validators.py  file_to_module.py  lint_provider_class.py  linter.py  method_validators.py  node_navigators.py  project_linter.py  pyproject.toml  read_file.py  tree_structure.py  types.py
python_architecture_linter/ast_validators/: class_validators.py  function_validators.py  method_validators.py  module_validators.py  nodeng_validator.py
python_architecture_linter/domain_objects/: file.py  validation_result.py
python_architecture_linter/navigation/: requirement.py
python_architecture_linter/tests/: test_file_to_module.py  test_linter.py  test_node_navigators.py  test_tree_structure.py
python_architecture_linter/tests/cases/: test_modular_provider_architecture.py
python_architecture_linter/tests/cases/modular_provider_architecture/modular_provider_architecture/runtime_module/: provider.py
python_architecture_linter/tree_structure/: structure.py
python_architecture_linter/tree_structure/tests/: test_structure.py
python_architecture_linter_cli/: BUILD  LICENCE  README.md  __init__.py  lint_command.py  pyproject.toml  run.py  steps.py
python_architecture_linter_cli/tests/: test_lint_command.py
python_architecture_linter_grimp_extension/: BUILD  LICENCE  README.md  grimp_definition.py  grimp_navigators.py  node_normaliser.py  pyproject.toml  test_grimp.py
python_architecture_linter_grimp_extension/tests/: test_lint_command.py  test_node_normaliser.py
