[tool.poetry]
name = "python-architecture-linter"
version = "0.1.0"
description = "monorepo for the python architecture linter"
authors = ["Brian Graham <Brian@statagroup.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
astroid = "^2.5.8"
click = "^8.0.1"

[tool.poetry.dev-dependencies]
pytest = "^6.2.4"
flake8 = "^3.9.2"
mypy = "^0.902"
black = "^21.6b0"
isort = "^5.8.0"
coverage = "^5.5"
pytest-cov = "^2.12.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.black]
line-length = 120
exclude = '''
/(
    \.git
  | \.mypy_cache
)/
'''

[tool.coverage.run]
source = ["./python_architecture_linter"]

[tool.isort]
profile = "black"
atomic = true
include_trailing_comma = true
use_parentheses = true
src_paths = ["python_architecture_linter", "tests"]
skip_glob = []
filter_files = true
known_first_party = "python_architecture_linter"

