[tool.poetry]
name = "modular-provider-architecture-definition"
version = "0.1.0"
description = "architecture definition for a modular architecture based around instance providers"
authors = ["Brian Graham <Brian@statagroup.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
astroid = "^2.5.8"
python-architecture-linter = "^0.1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
