[tool.poetry]
name = "modular-provider-architecture-definition"
version = "0.1.0"
description = "architecture definition for a modular architecture based around instance providers"
authors = ["Brian Graham <Brian@statagroup.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
astroid = "^2.5.8"
python-architecture-linter = "^0.1.0"


[tool.poetry.dev-dependencies]
pytest = "^6.2.4"
flake8 = "^3.9.2"
mypy = "^0.902"
black = "^21.6b0"
isort = "^5.8.0"
coverage = "^5.5"
pytest-cov = "^2.12.1"
