[tool.poetry]
name = "python-architecture-linter-cli"
version = "0.1.0"
description = "CLI to Lint architecture"
authors = ["Brian Graham <Brian@statagroup.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
click = "^8.0.1"
python-architecture-linter = "^0.1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
