[tool.poetry]
name = "python_architecture_linter_grimp_extension"
version = "0.1.2"
description = "Plug grimp into python-architecture-linter"
authors = ["Brian Graham <Brian@statagroup.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
grimp = "^1.2.3"

[tool.poetry.dev-dependencies]
pytest = "^6.2.4"
flake8 = "^3.9.2"
mypy = "^0.902"
black = "^21.6b0"
isort = "^5.8.0"
coverage = "^5.5"
pytest-cov = "^2.12.1"
